--- a/SuperShop.Mobile/SuperShop.Mobile.iOS/Info.plist
+++ b/SuperShop.Mobile/SuperShop.Mobile.iOS/Info.plist
@@ -35,6 +35,12 @@
     <key>CFBundleVersion</key>
     <string>1.0</string>
     <key>CFBundleShortVersionString</key>
-    <string>1</string>
+     <array>
+	    <string>es</string>
+	    <string>pt</string>
+    </array>
+    <key>CFBundleDevelopmentRegion</key>
+        <string>en</string>
+
   </dict>
 </plist>
